feat: 完善展示细节

--- a/src/pages/Home/Comp/Price.less
+++ b/src/pages/Home/Comp/Price.less
@@ -6,6 +6,14 @@
     border-radius: 5px;
     padding-left: 20px;
 
+    &.up .percent {
+        color: #b11202;
+    }
+
+    &.down .percent {
+        color: #007c32;
+    }
+
     > div {
         float: left;
         height: 100%;
@@ -14,6 +22,7 @@
         font-weight: bold;
     }
 }
+
 
 .name {
     width: 150px;
@@ -31,5 +40,5 @@
 }
 
 .percent {
-    // font-size: 30px!important;
+    font-size: 30px!important;
 }
